# IARRC-2017

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  get_started.sh  install_dependencies.sh  package.xml
include/: DragRaceNode.h  LidarObstacle.h  LidarObstacleManager.h
launch/: drag_race.launch
src/: DragRaceController.cpp  DragRaceNode.cpp  LidarObstacle.cpp  LidarObstacleManager.cpp  drag_race_node.cpp
src/better_lane_follow/: CMakeLists.txt  package.xml
src/better_lane_follow/include/: LaneFollow.h  LineDetect.h
src/better_lane_follow/launch/: circuit_race.launch
src/better_lane_follow/src/: LaneFollow.cpp  LineDetect.cpp  lane_follow.cpp
src/better_lane_follow/test/: lane-follow-test.cpp  line-detect-test.cpp
src/circle_detection/: CMakeLists.txt  package.xml
src/circle_detection/include/: CircleDetection.h
src/circle_detection/src/: CircleDetection.cpp
src/circle_detection/test/: green-recognition-test.cpp
src/drag_race/: CMakeLists.txt  package.xml
src/drag_race/include/: DragRaceController.h  DragRaceNode.h  LidarObstacleManager.h
src/drag_race/launch/: drag_race.launch
src/drag_race/src/: DragRaceController.cpp  DragRaceNode.cpp  LidarObstacle.cpp  LidarObstacleManager.cpp
src/drag_race/src/test/: lidar-obstacle-manager-test.cpp
src/drag_race/test/: drag-race-controller-test.cpp  lidar-obstacle-manager-test.cpp  lidar-obstacle-test.cpp
src/drivers/launch/: steering_driver.launch
src/drivers/src/: SteeringDriver.cpp
src/firmware/Servo_Range_Test/: Servo_Range_Test.ino
src/firmware/calibration/: calibration.ino
src/firmware/firmware/: firmware.ino
src/green_recognition/: CMakeLists.txt  package.xml
src/green_recognition/include/: CircleDetection.h  GreenFilter.h  GreenRecognition.h  ManualFilter.h
src/green_recognition/src/: CircleDetection.cpp  GreenFilter.cpp  GreenRecognition.cpp  HSVFilter.cpp  ManualFilter.cpp  circle_detection.cpp  green_filter.cpp  green_recognition.cpp
src/green_recognition/test/: green-recognition-test.cpp
src/include/: LidarObstacleManager.h
src/lane_follow/: CMakeLists.txt  package.xml
src/lane_follow/include/: LaneFollow.h  LineDetect.h
src/lane_follow/src/: LaneFollow.cpp  LineDetect.cpp  lane_follow.cpp  line_detect.cpp
src/src/include/: DragRaceNode.h
src/src/launch/: drag_race.launch
src/vision/: CMakeLists.txt  package.xml
src/vision/include/: HSVFilterNode.h  IPMFilter.h
src/vision/launch/: camera.launch  lane_detection.launch  stoplight_detection.launch
src/vision/scripts/: image_stitcher  image_stitcher.py  imgPublisher.py  sampleSubscriber.py
src/vision/scripts/pyimagesearch/: panorama.py
src/vision/src/: CircleDetection.cpp  HSVFilterNode.cpp  IPMFilter.cpp  IPMFilterNode.cpp  camera_init.cpp  hsv_filter.cpp  ipm_filter.cpp
test/: lidar-obstacle-manager-test.cpp
